; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_sha256.c_Curl_sha256it.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_sha256.c_Curl_sha256it.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_sha256it(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32 @SHA256_Init(i32* %5)
  %7 = load i8*, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strlen(i8* %8)
  %10 = call i32 @curlx_uztoui(i32 %9)
  %11 = call i32 @SHA256_Update(i32* %5, i8* %7, i32 %10)
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @SHA256_Final(i8* %12, i32* %5)
  ret void
}

declare dso_local i32 @SHA256_Init(i32*) #1

declare dso_local i32 @SHA256_Update(i32*, i8*, i32) #1

declare dso_local i32 @curlx_uztoui(i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @SHA256_Final(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
